--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,18 @@
         "php": ">=7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ausi/slug-generator": "^1.1",
+        "symfony/browser-kit": "5.1.*",
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
+        "symfony/finder": "5.1.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.1.*",
+        "symfony/monolog-bundle": "^3.5",
         "symfony/yaml": "5.1.*"
     },
     "require-dev": {
+        "symfony/phpunit-bridge": "^5.1"
     },
     "config": {
         "optimize-autoloader": true,
